[package]
name = "teensy4"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
teensy4-bsp = { version = "0.5.1", features = ["rt"] }
teensy4-panic = "0.2.3"
teensy4-fcb = "0.4.0"
rtic = { version = "2.2.0", features = ["thumbv7-backend"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
panic = "abort"

[profile.dev]
codegen-units = 1
debug = 2
incremental = false
lto = "thin"
opt-level = "s"
panic = "abort"

# Disable tests for no_std
[profile.test]

[profile.bench]
